testdata/baselines/reference/submodule/conformance/jsDeclarationsReferenceToClassInstanceCrossFile.errors.txt
index.js(9,14): error TS2339: Property 'objects' does not exist on type 'Render'.
index.js(14,18): error TS2749: 'Rectangle' refers to a value, but is being used as a type here. Did you mean 'typeof Rectangle'?
index.js(18,14): error TS2339: Property 'objects' does not exist on type 'Render'.
test.js(5,31): error TS2339: Property 'objects' does not exist on type 'Render'.


==== test.js (1 errors) ====
    const {Render} = require("./index");
    let render = new Render();
    
    render.addRectangle();
    console.log("Objects", render.objects);
                                  ~~~~~~~
!!! error TS2339: Property 'objects' does not exist on type 'Render'.
==== rectangle.js (0 errors) ====
    class Rectangle {
        constructor() {
            console.log("I'm a rectangle!");
        }
    }
    
    module.exports = { Rectangle };
==== index.js (3 errors) ====
    const {Rectangle} = require('./rectangle');
    
    class Render {
        constructor() {
            /**
             * Object list
             * @type {Rectangle[]}
             */
            this.objects = [];
                 ~~~~~~~
!!! error TS2339: Property 'objects' does not exist on type 'Render'.
        }
        /**
         * Adds a rectangle
         * 
         * @returns {Rectangle} the rect
                     ~~~~~~~~~
!!! error TS2749: 'Rectangle' refers to a value, but is being used as a type here. Did you mean 'typeof Rectangle'?
         */
        addRectangle() {
            const obj = new Rectangle();
            this.objects.push(obj);
                 ~~~~~~~
!!! error TS2339: Property 'objects' does not exist on type 'Render'.
            return obj;
        }
    }
    
    module.exports = { Render };